--- a/proposals/template/gp-0000.md
+++ b/proposals/template/gp-0000.md
@@ -1,5 +1,5 @@
 ---
-gp: 0000 - <Number>
+up: 0000 - <Number>
 title: Proposal 1 Title - <String>
 date-created: 0000-00-00 - <ISO 8601 (yyyy-mm-dd) format>
 author: 'User (user) - <String, a list of the authors name(s) and/or username(s)>'
@@ -12,7 +12,7 @@ date-executed: 0000-00-00 - <ISO 8601 (yyyy-mm-dd) if executed, or empty>
  
 ## Overview
  
-GP - Libra Framework Governance Proposal
+UP - Libra Framework Upgrade Proposal
  
 Pick a four digit number subsequent to the latest PR raised and name your file.
  
@@ -24,9 +24,9 @@ Pick a four digit number subsequent to the latest PR raised and name your file.
 - REJECTED = The governance proposal did not receive enough support
 - WITHDRAWN = The governance proposal is withdrawn before being submitted on the network
  
-Describe the issue that motivates this GP. It should indicate all parameters that are being changed and why doing so is important.
+Describe the issue that motivates this UP. It should indicate all parameters that are being changed and why doing so is important.
  
-Explain what benefits the enhancement this change will bring. To the extent possible, enumerate use cases affected by this CGP.
+Explain what benefits the enhancement this change will bring. To the extent possible, enumerate use cases affected by this UP.
  
 Once the proposal is successfully proposed on chain, update this file so that the title number matches the proposal ID.
  
@@ -42,4 +42,4 @@ Fill out the following template for each transaction in the proposal
 ## Useful Links
  
 * Optional section
-* Links to related GP or other documents (eg. if this is a proposal to upgrade the framework point to the hash of the release commit to main)
+* Links to related UP or other documents (eg. if this is a proposal to upgrade the framework point to the hash of the release commit to main)
