--- a/proposals/up-0001/up-0001.md
+++ b/proposals/up-0001/up-0001.md
@@ -3,9 +3,10 @@ up: 0001
 title: 'Release 7.0.1'
 date-created: 2024-04-19
 author: '@0xzoz'
-status: DRAFT
+status: EXECUTED
 discussions-to: 'N/A'
-date-executed: 0000-00-00 - <ISO 8601 (yyyy-mm-dd) if executed, or empty>
+on-chain-proposal-id: 2
+date-executed: 2024-04-20 
 ---
 
 <!-- Please view other proposals for an example on filling the above section. It is important the type is correct eg Number, String -->
