--- a/proposals/up-0003/up-0003.md
+++ b/proposals/up-0003/up-0003.md
@@ -6,25 +6,26 @@ author: '@0xzoz'
 status: DRAFT
 discussions-to: 'N/A'
 on-chain-proposal-id: TBD
-date-executed: TBD 
+date-executed: TBD
 ---
 
 <!-- Please view other proposals for an example on filling the above section. It is important the type is correct eg Number, String -->
- 
+
 ## Overview
- 
+
 UP-0003
 
- 
+
 ### Status
 
-- DRAFT = Feedback collection
+- Executed
 
- 
+
 This proposal is to upgrade the libra-framework from 7.0.1 > 7.0.2
- 
+
 ## Proposed Changes
- 
+NOte: These changes only describe Move system smart contract policies. Full changelog can be seen at: https://github.com/0LNetworkCommunity/libra-framework/releases/tag/v7.0.2
+
 The following is the changelog of this latest release:
 
 * [tools] cleanup txs help text by @0o-de-lally in https://github.com/0LNetworkCommunity/libra-framework/pull/234
@@ -35,10 +36,9 @@ The following is the changelog of this latest release:
 
 
 **Full Changelog**: https://github.com/0LNetworkCommunity/libra-framework/compare/7.0.1...7.0.2
- 
+
 ## Verification Hash
 
 `7ff820792b8d0d2a05261937b0a895cc907b28dbcb4daa31956e8d7e5144715f`
- 
+
 ## Useful Links
- 
