get release branch

--- a/proposals/up-0004/up-0004.md
+++ b/proposals/up-0004/up-0004.md
@@ -126,10 +126,12 @@ rustup default 1.78.0
 ```
 
 
-#### Get the release source
+#### Get the release source at `release-7.0.3`
 ```
 # assumes you have a clone of the repo locally
 # git clone https://github.com/0LNetworkCommunity/libra-framework
+
+git checkout release-7.0.3
 
 cd libra-framework
 
