--- a/proposals/up-0004/up-0004.md
+++ b/proposals/up-0004/up-0004.md
@@ -1,7 +1,7 @@
 ---
 up: 0004
 title: 'Release 7.0.3'
-date-created: 2024-04-24
+date-created: 2024-08-20
 author: '@0D'
 status: DRAFT
 discussions-to: 'N/A'
@@ -11,12 +11,21 @@ date-executed: TBD
 
 <!-- Please view other proposals for an example on filling the above section. It is important the type is correct eg Number, String -->
 
-# Overview
-
-UP-0003
+# UP-0004
 
 Implements Proposal 2408-01
 supporting documentation: [Proposal_2408-01_Supporting_Documents.pdf](./Proposal_2408-01_Supporting_Documents.pdf)
+
+##### Lazy mode
+
+```
+git fetch && checkout release-7.0.3
+
+cargo build --release -p libra --locked
+cp target/release/libra ~/.cargo/bin/
+
+libra txs vote --proposal-id 5
+```
 
 ## Compatibility
 
@@ -81,7 +90,6 @@ libra txs governance propose --proposal-script-dir ./proposals/up-004/1-libra-fr
 ```
 
 
-
 2. VOTE: 2/3rds of validators can vote on the proposal
 
 
@@ -89,7 +97,7 @@ libra txs governance propose --proposal-script-dir ./proposals/up-004/1-libra-fr
 
 for example:
 
-`libra txs vote --proposal-id 1`
+`libra txs vote --proposal-id 5`
 
 
 
@@ -131,6 +139,7 @@ rustup default 1.78.0
 # assumes you have a clone of the repo locally
 # git clone https://github.com/0LNetworkCommunity/libra-framework
 
+git fetch
 git checkout release-7.0.3
 
 cd libra-framework
