--- a/proposals/up-0004/up-0004.md
+++ b/proposals/up-0004/up-0004.md
@@ -40,18 +40,18 @@ As such the upgrade script requires the modifier argument `--danger-for-upgrade`
 This proposal is to upgrade the libra-framework from 7.0.2 > 7.0.3
 
 ## Proposed Changes
-NOte: These changes only describe Move system smart contract policies. Full changelog can be seen at: https://github.com/0LNetworkCommunity/libra-framework/releases/tag/v7.0.3
+NOTE: These changes only describe Move system smart contract policies. Full changelog can be seen at: https://github.com/0LNetworkCommunity/libra-framework/releases/tag/v7.0.3
 
 
 The following is the changelog of this latest release:
 
-[move] lower percentage gap for seats offered vs eligible [(#305)](https://github.com/0LNetworkCommunity/libra-framework/pull/305)
+- [move] lower percentage gap for seats offered vs eligible [(#305)](https://github.com/0LNetworkCommunity/libra-framework/pull/305)
 
-[move] enhance vouch system [breaking] [(#303)](https://github.com/0LNetworkCommunity/libra-framework/pull/303)
+- [move] enhance vouch system [breaking] [(#303)](https://github.com/0LNetworkCommunity/libra-framework/pull/303)
 
-[move] PoF tiebreaker randomize tied bids, maintain fewer seats than bidders (replay PR)[breaking] [(#299)](https://github.com/0LNetworkCommunity/libra-framework/pull/299)
+- [move] PoF tiebreaker randomize tied bids, maintain fewer seats than bidders (replay PR)[breaking] [(#299)](https://github.com/0LNetworkCommunity/libra-framework/pull/299)
 
-[move] multi_action initialization with offer pattern [(#288)](https://github.com/0LNetworkCommunity/libra-framework/pull/288)
+- [move] multi_action initialization with offer pattern [(#288)](https://github.com/0LNetworkCommunity/libra-framework/pull/288)
 
 
 **Full Changelog**: https://github.com/0LNetworkCommunity/libra-framework/compare/7.0.2...7.0.3
