--- a/proposals/up-0004/up-0004.md
+++ b/proposals/up-0004/up-0004.md
@@ -19,7 +19,7 @@ supporting documentation: [Proposal_2408-01_Supporting_Documents.pdf](./Proposal
 ##### Lazy mode
 
 ```
-git fetch && checkout release-7.0.3
+git fetch && git checkout release-7.0.3
 
 cargo build --release -p libra --locked
 cp target/release/libra ~/.cargo/bin/
