--- a/proposals/up-0004/up-0004.md
+++ b/proposals/up-0004/up-0004.md
@@ -19,12 +19,18 @@ supporting documentation: [Proposal_2408-01_Supporting_Documents.pdf](./Proposal
 ##### Lazy mode
 
 ```
-git fetch && git checkout release-7.0.3
+# vote on the proposal
+libra txs vote --proposal-id 5
 
+# then upgrade your binary
+git fetch && git checkout release-7.0.3
 cargo build --release -p libra --locked
 cp target/release/libra ~/.cargo/bin/
 
-libra txs vote --proposal-id 5
+# check version says 7.0.3
+libra version
+
+# restart your node
 ```
 
 ## Compatibility
