--- a/proposals/up-0009/up-0009.md
+++ b/proposals/up-0009/up-0009.md
@@ -23,7 +23,7 @@ The previous proposal up-0005 used up sequence numbers 5, 6, 7, 8 for the upgrad
 
 ```
 # vote on the proposal
-libra txs vote --proposal-id 9
+libra txs governance vote --proposal-id 9
 
 ```
 
