--- a/proposals/up-0010/up-0010.md
+++ b/proposals/up-0010/up-0010.md
@@ -17,11 +17,12 @@ UP 10 - Back to FILO
 
 ## Motivation
 
+Download [ OL-FILO-Recommendation.pdf](OL-FILO-Recommendation.pdf ) for the context of the proposal.
+
 This upgrade proposal introduces significant policy-related changes centered around the First In, Last Out (FILO) principle — a foundational concept for the OL network. These changes were developed through extensive governance discussions from January to May 2025. Ultimately after two rounds of polling, the community voted unanimously in favor of adopting the policies.
 
 ![Polling Result](poll-result.png)
 
-See OL-FILO-Recommendation.pdf for full context
 
 The changes primarily affect how previous accounts are now converted to "Founder" accounts upon re-joining the network. Founder accounts are converted to slow wallets, which are reset with an unlocked amount available of zero. These founder accounts must go through a web of trust-based Sybil test before they can resume unlocking. No coins are lost in this process.
 
