Update up-0012 status to deployed

--- a/proposals/up-0012/up-0012.md
+++ b/proposals/up-0012/up-0012.md
@@ -29,7 +29,7 @@ Code version 8.0.2 is a backward compatible Move upgrade. Meaning the upgrade do
 
 ## Status
 
-- PROPOSED
+- DEPLOYED
 
 This proposal is to upgrade the libra-framework from 8.0.1 > 8.0.2
 
