Update to include PR #407

--- a/proposals/up-0015/up-0015.md
+++ b/proposals/up-0015/up-0015.md
@@ -40,12 +40,13 @@ NOTE: These changes only describe Move system smart contract policies. Full chan
 
 The following is the changelog of this latest release:
 
-- [move] handle malformed timestamps in activity.move [(#406)](https://github.com/0LNetworkCommunity/libra-framework/pull/406)
+- [txs] better error messages on txs that need auth [(#406)](https://github.com/0LNetworkCommunity/libra-framework/pull/407)
+- [vouch score] refactor walk to find all simple paths [(#406)](https://github.com/0LNetworkCommunity/libra-framework/pull/406)
 
 
 ## Script Hash
 
-`0x37f96f3666e9857d1693fafdf48eb18fc706e67470b4450c2fbd7a14f8c8ec77`
+`0x532945052c0b894450b1afaac259a40bbb3480328b59304e1321e73db87c01ff`
 
 # Upgrade Instructions
 
