--- a/proposals/up-0016/1-exit-gov-mode/up-0016.md
+++ b/proposals/up-0016/1-exit-gov-mode/up-0016.md
@@ -63,7 +63,7 @@ libra txs governance vote --proposal-id 16
 ## Reproducing the artifacts
 The artifacts were build with:
 
-1. IMPORTANT: modify the Move.toml at proposals/up-0016/Move.toml, to include the full path to the OL libra-framework source code.
+1. IMPORTANT: modify the Move.toml at `proposals/up-0016/1-exit-gov-mode/Move.toml`, to include the full path to the OL libra-framework source code.
 
 ```
 # in Move.toml
