--- a/proposals/up-0021/up-0021.md
+++ b/proposals/up-0021/up-0021.md
@@ -3,10 +3,10 @@ up: 0021
 title: 'Release 8.0.11'
 date-created: 2025-07-16
 author: '@0D'
-status: PROPOSED
+status: EXECUTED
 discussions-to: https://discord.com/channels/833074824447655976/916199092789600276
 on-chain-proposal-id: 21
-date-executed: TBD
+date-executed: 2025-07-17
 ---
 
 # UP-0021
